# my_kuvar

./: README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  Тестовое задание Python стажировка.docx
templates/: base.html  index.html
templates/partials/: task_list.html
